feat(earnings): STUD-357: Get Earnings per song
